k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tarnished-api-service
  labels:
    app: tarnished-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: tarnished-api
